--- a/style.css
+++ b/style.css
@@ -1,3 +1,61 @@
-.body {
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Helvetica', sans-serif;
+    background-color: #650d5b;
+    font-size: 21px;
+    font-weight: 500;
+}
+*:focus {
+    outline: none;
+}
+/* } #242526; */
 
+body {
+    align-items: flex-start;
+    background: #242526;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    padding: 32px;
+    width: 100vw;
+}
+
+.container {
+    background: #650d5b;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 16px;
+}
+
+input[type="text"] {
+    display: block;
+    margin: 12px 0;
+    padding: 12px 76px;
+    background: #242526;
+    border: #242526 solid 3px;
+}
+
+input[type="text"]:hover {
+    border: 3px solid black;
+  }
+
+button {
+    background: #242526;
+    border: #242526 solid 3px;
+    cursor: pointer;
+    font-weight: bold;
+    margin: 12px 0;
+    padding: 12px 16px;
+    width: 100%;
+}
+
+button:hover {
+    border-color: #000000;
+    background: #1f2021;
+}
+
+input[type='checkbox'] {
+    accent-color: #242526;
 }
